--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </br>
             </div> 
             <div>
-                <h3 class="hg">GUEST</h3>
+                <h3 class="hg">AWAY</h3>
                  <span id="guestscore-el">0</span>
                 <br>
                 <button class= "button" onclick="ad1()"> +1 </button>
